--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
             <h2>Profil Anggota RT 4</h2>
             <div class="profil-grid">
                 
-                <div class="profil-card">
+                <div class="profil-card pembina-card">
+                    <span class="pembina-label">PEMBINA</span>
                     <img src="path/ke/foto_luthfi.jpg" alt="Foto Ahmad Luthfi Firdaus S.Pd">
                     <h3>Ahmad Luthfi Firdaus S.Pd</h3>
                     <p><strong>Peran:</strong> Pembina</p>
                     <p><strong>Asal Sekolah:</strong> SMP Islam Plus Baitul Maal</p>
                     <p><strong>No. Telp:</strong> 0812-XXXX-5678</p>
                 </div>
-
                 <div class="profil-card">
                     <img src="path/ke/foto_kholdun.jpg" alt="Foto Kholdun">
                     <h3>Kholdun</h3>
