--- a/index.html
+++ b/index.html
@@ -193,4 +193,69 @@
                     <h3>Azmi</h3>
                     <p><strong>Peran:</strong> PJ. Ice Breaking</p>
                     <p><strong>Asal Sekolah:</strong> SMP Islam Plus Baitul Maal</p>
-                    <p><strong>No.
+                    <p><strong>No. Telp:</strong> 0819-XXXX-6789</p>
+                </div>
+
+                <div class="profil-card">
+                    <img src="path/ke/foto_hisyam.jpg" alt="Foto Hisyam">
+                    <h3>Hisyam</h3>
+                    <p><strong>Peran:</strong> PJ. Perkap (Perlengkapan)</p>
+                    <p><strong>Asal Sekolah:</strong> SMP Islam Plus Baitul Maal</p>
+                    <p><strong>No. Telp:</strong> 0821-XXXX-1230</M>
+                </div>
+
+                <div class="profil-card">
+                    <img src="path/ke/foto_banu.jpg" alt="Foto Banu">
+                    <h3>Banu</h3>
+                    <p><strong>Peran:</strong> PJ. Ice Breaking</p>
+                    <p><strong>Asal Sekolah:</strong> SMP Islam Plus Baitul Maal</p>
+                    <p><strong>No. Telp:</strong> 0822-XXXX-4567</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="sejarah" class="content-section page-section">
+            <h2>Wawasan & Sejarah Lokasi Kunjungan</h2>
+            <p>Memahami latar belakang tempat yang kami kunjungi adalah bagian penting dari ekspedisi ini.</p>
+            
+            <div class="sejarah-item">
+                <img src="path/ke/foto_museum_angkut_sejarah.jpg" alt="Foto Museum Angkut">
+                <div>
+                    <h3>Museum Angkut</h3>
+                    <p>Museum transportasi pertama di Asia Tenggara ini resmi dibuka pada 9 Maret 2014 dan dikelola oleh Jawa Timur Park Group. Tujuannya adalah memberikan edukasi tentang sejarah dan perkembangan transportasi di dunia, disajikan dengan cara yang sangat menarik dan interaktif.</p>
+                </div>
+            </div>
+            
+            <div class="sejarah-item">
+                <img src="path/ke/foto_jodipan.jpg" alt="Foto Kampung Warna Warni Jodipan">
+                <div>
+                    <h3>Kampung Wisata Jodipan (Kampung Warna-Warni)</h3>
+                    <p>Siapa sangka, tempat wisata ikonik ini dulunya adalah pemukiman kumuh di tepi Sungai Brantas. Pada tahun 2016, sekelompok mahasiswa UMM bekerja sama dengan perusahaan cat memprakarsai proyek sosial yang mengubah kampung ini menjadi "Kampung Warna-Warni" pertama di Indonesia, yang kini menjadi inspirasi bagi daerah lain.</p>
+                </div>
+            </div>
+
+            <div class="sejarah-item">
+                <img src="path/ke/foto_brawijaya.jpg" alt="Foto Museum Brawijaya">
+                <div>
+                    <h3>Museum Brawijaya</h3>
+                    <p>Didirikan pada tahun 1968 di Malang, museum militer ini didedikasikan untuk memamerkan benda bersejarah dari perjuangan kemerdekaan Indonesia, khususnya di wilayah Jawa Timur. Koleksi paling ikonik di sini adalah "Gerbong Maut", yang menjadi saksi bisu tragedi pemindahan pejuang dari Bondowoso ke Surabaya.</p>
+                </div>
+            </div>
+
+            <div class="sejarah-item">
+                <img src="path/ke/foto_pujon_lor.jpg" alt="Foto Desa Pujon Lor">
+                <div>
+                    <h3>Desa Pujon Lor</h3>
+                    <p>Desa ini memiliki sejarah panjang. Berawal dari hutan belantara, namanya mulai dikenal setelah Ki Ageng Selo membuka lahan di sini. Pada masa kolonial Belanda, Pujon Lor pernah menjadi pusat kawedanan (wilayah administrasi setingkat di atas kecamatan) Pujon, menunjukkan posisinya yang strategis di wilayah tersebut.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 - Ekspedisi RT 4 | SMP Islam Plus Baitul Maal</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
